# sarek

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .markdownlint.json  .nf-core-lint.yml  .nf-core.yml  .pre-commit-config.yaml  .prettierignore  .swp  .travis.yml  CHANGELOG.md  CITATIONS.md  CLAUDE.md  CODE_OF_CONDUCT.md  DELIVERY.README.md  DEVELOPER_GUIDELINES.md  Dockerfile  FreeBayes.nf  GUIDELINES.md  INSTALL.md  InstallStrelka.py  Jenkinsfile  LICENSE  MuTect1.nf  MultiFQtoVC.nf  MultiFQtoVC_test.nf  Mutect1.nf  Notes.md  PULL_REQUEST_TEMPLATE.md  README.md  Singularity  Strelka.nf  TODO-rewrite-audit.md  TODO-rewrite-identify.md  TODO-rewrite-plan.md  TODO-rewrite-session-1.md  TODO-rewrite-validate.md  (+67 more)
.beads/: metadata.json
.circleci/: config.yml
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  markdownlint.yml  nf-test-tags.yml
.latch/: config  workflow_name
assets/: adaptivecard.json  email_template.html  email_template.txt  methods_description_template.yml  multiqc_config.yaml  (+16 more)
ironqc/: .gitignore  Cargo.toml
ironqc/benchmark/: README.md  run_benchmark.sh
ironqc/scripts/: validate_indexcov.py  validate_mosdepth.py  validate_stats.py
ironqc/src/: cli.rs  io.rs  main.rs
ironqc/src/bundle/: mod.rs
ironqc/src/indexcov/: mod.rs
ironqc/src/mosdepth/: mod.rs
ironqc/src/stats/: mod.rs
ironqc/tests/: integration_cli.rs
ironqc/tests/expected/upstream/small/: test.md.cram.stats
(+2733 files in other folders)
