[package]
name = "ironqc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indexmap = "2"
plotters = "0.3"
rayon = "1"
rust-htslib = { version = "0.47", features = ["static", "bzip2", "lzma", "curl"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
